--- a/css/styles.css
+++ b/css/styles.css
@@ -301,13 +301,14 @@ body {
 
 #second-section #first-part {
   scroll-snap-align: start;
-  height: 100vh;
+  height: 92vh;
   padding-top: 8vh;
+  margin-bottom: 8vh;
 }
 #second-section #first-part #logo-intro {
   width: 48vw;
   padding-left: 12px;
-  margin: 1rem 0 2rem 0;
+  margin: 1rem 0 1.5rem 0;
 }
 #second-section #first-part #images {
   gap: 0.75rem;
@@ -361,7 +362,7 @@ body {
   display: none;
 }
 #second-section #first-part #welcome-message .orange-font {
-  padding: 3rem 1rem 1rem 1rem;
+  padding: 2rem 1rem 1rem 1rem;
   font-size: 1rem;
   line-height: 1.65rem;
   letter-spacing: 0.25px;
@@ -379,7 +380,7 @@ body {
 }
 #second-section #second-part {
   padding-top: 8vh;
-  height: 94vh;
+  height: 92vh;
   scroll-snap-align: start;
 }
 #second-section #second-part #welcome {
@@ -421,7 +422,7 @@ body {
 }
 
 #footer {
-  height: 6vh;
+  height: 8vh;
 }
 #footer p {
   font-size: 0.65rem;
