--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,10 @@ section {
   justify-content: space-around;
 }
 
+.j-c-e {
+  justify-content: end;
+}
+
 .grid {
   display: grid;
 }
@@ -99,7 +103,7 @@ section {
 }
 
 .orange-font {
-  color: rgb(255, 111, 0);
+  color: rgb(255, 68, 0);
 }
 
 .gray-font {
@@ -204,6 +208,12 @@ a {
   border-radius: 10px;
   letter-spacing: 0;
 }
+#header-portrait #nav-portrait #menu #order-online #coming-soon {
+  font-size: 0.75rem;
+  line-height: 0.8rem;
+  color: rgb(227, 227, 227);
+  font-style: italic;
+}
 #header-portrait #nav-portrait input:checked ~ #menu {
   opacity: 1;
   transform: scale(1);
@@ -276,23 +286,31 @@ body {
 }
 #first-section #store-info .info {
   background-color: rgba(0, 0, 0, 0.5);
-  border: 1px solid white;
+  border: 0.5px solid white;
   border-radius: 3px;
   height: 20vh;
   width: 38vw;
-  padding-left: 1rem;
 }
 #first-section #store-info .info p #holidays {
-  font-size: 0.65rem;
-  color: rgb(190, 190, 190);
+  font-size: 0.75rem;
+  color: rgb(169, 169, 169);
+}
+#first-section #store-info #address {
+  padding: 0 0.5rem;
 }
 #first-section #store-info #address p {
   line-height: 1.5rem;
+}
+#first-section #store-info #address #clickToCopy {
+  margin: 0.5rem 0;
+  font-size: 0.75rem;
+  color: rgb(169, 169, 169);
 }
 #first-section #store-info #address:hover {
   cursor: pointer;
 }
 #first-section #store-info #open-hours {
+  padding-left: 1rem;
   gap: 0.75rem;
 }
 #first-section #double-down img {
@@ -401,9 +419,10 @@ body {
   margin: 1.75rem auto 0 auto;
   width: -moz-fit-content;
   width: fit-content;
-  background-color: rgb(255, 140, 0);
-  padding: 0.75rem 1.25rem;
-  border-radius: 15px;
+  background-color: rgb(247, 91, 0);
+  padding: 0.5rem 1.25rem;
+  border-radius: 8px;
+  font-size: 0.85rem;
 }
 #second-section #second-part #map #landscape-only {
   display: none;
