--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,27 +32,33 @@
         gap: 1rem;
         .info {
             background-color: rgba(0, 0, 0, 0.5);
-            border: 1px solid white;
+            border: .5px solid white;
             border-radius: 3px;
             height: 20vh;
             width: 38vw;
-            padding-left: 1rem;
             p {
                 #holidays {
-                    font-size: .65rem;
-                    color: rgb(190, 190, 190);
+                    font-size: .75rem;
+                    color: rgb(169, 169, 169);
                 }
             }
         }
         #address {
+            padding: 0 .5rem;
             p {
                 line-height: 1.5rem;
+            }
+            #clickToCopy {
+                margin: .5rem 0;
+                font-size: .75rem;
+                color: rgb(169, 169, 169);
             }
         }
         #address:hover {
             cursor: pointer;
         }
         #open-hours {
+            padding-left: 1rem;
             gap: .75rem;
         }
     }
@@ -163,9 +169,10 @@
             a {
                 margin: 1.75rem auto 0 auto;
                 width: fit-content;
-                background-color: rgb(255, 140, 0);
-                padding: .75rem 1.25rem;
-                border-radius: 15px;
+                background-color: rgb(247, 91, 0);
+                padding: .5rem 1.25rem;
+                border-radius: 8px;
+                font-size: .85rem;
             }
             #landscape-only {
                 display: none;
