--- a/css/styles.css
+++ b/css/styles.css
@@ -296,7 +296,7 @@ body {
   color: rgb(169, 169, 169);
 }
 #first-section #store-info #address {
-  padding: 0 0.5rem;
+  padding: 1.25rem 0.5rem 0 0.5rem;
 }
 #first-section #store-info #address p {
   line-height: 1.5rem;
@@ -310,7 +310,7 @@ body {
   cursor: pointer;
 }
 #first-section #store-info #open-hours {
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   gap: 0.75rem;
 }
 #first-section #double-down img {
