--- a/css/styles.scss
+++ b/css/styles.scss
@@ -44,7 +44,7 @@
             }
         }
         #address {
-            padding: 0 .5rem;
+            padding: 1.25rem .5rem 0 .5rem;
             p {
                 line-height: 1.5rem;
             }
@@ -58,7 +58,7 @@
             cursor: pointer;
         }
         #open-hours {
-            padding-left: 1rem;
+            padding-left: 1.5rem;
             gap: .75rem;
         }
     }
