--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ body {
   cursor: pointer;
 }
 #first-section #store-info #open-hours {
-  padding-left: 1.5rem;
+  padding-left: 1.25rem;
   gap: 0.75rem;
 }
 #first-section #double-down img {
@@ -685,6 +685,12 @@ body {
     position: absolute;
     top: 1.5vh;
     right: 3vw;
+    font-size: 1.15rem;
+  }
+  #header-landscape #nav-landscape #menu-landscape a #order-online #coming-soon-land {
+    font-size: 0.85rem;
+    color: rgb(222, 222, 222);
+    line-height: 0.75rem;
   }
   #header-landscape #nav-landscape #menu-landscape a li:hover {
     color: rgb(255, 140, 0);
