--- a/css/styles.scss
+++ b/css/styles.scss
@@ -58,7 +58,7 @@
             cursor: pointer;
         }
         #open-hours {
-            padding-left: 1.5rem;
+            padding-left: 1.25rem;
             gap: .75rem;
         }
     }
@@ -466,6 +466,12 @@
                         position: absolute;
                         top: 1.5vh;
                         right: 3vw;
+                        font-size: 1.15rem;
+                        #coming-soon-land {
+                            font-size: .85rem;
+                            color: rgb(222, 222, 222);
+                            line-height: .75rem;
+                        }
                     }
                     li:hover {
                         color: rgb(255, 140, 0);
