update hours & nav bar & add font

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Ruda:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+IS:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 h1 {
     font-family: 'Rubik Mono One', monospace;
@@ -9,5 +11,6 @@ h3 {
     font-weight: 200;
 }
 body {
-    font-family: 'Ruda', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 400;
 }
