--- a/css/_global.scss
+++ b/css/_global.scss
@@ -157,12 +157,11 @@ a {
         }
         #menu {
             position: absolute;
-            top: calc(8vh - (8vh - 24px) / 2);
-            left: calc(56px - 100vw);
-            width: 100vw;
-            height: 64vh;
-            padding: 3.5rem 0;
-            background-color: rgb(0, 0, 0);
+            top: calc(8dvh - (8dvh - 24px) / 2 + 2dvh);
+            left: calc(20px - 80dvw);
+            width: 80dvw;
+            padding: 1rem;
+            background-color: rgba(255, 255, 255, 0.8);
             list-style-type: none;
             -webkit-font-smoothing: antialiased;
             
@@ -170,29 +169,18 @@ a {
             transition: opacity .5s ease;
             transform: scale(0);
 
-            border-bottom: .5px solid black;
+            border-radius: 100px;
+            border: 2px rgba(255, 255, 255, 0.75) solid;
 
             li {
-                padding: 1.75rem 0;
-                font-size: 1.55rem;
-                color: white;
-                font-weight: 600;
+                font-family: "Playwrite IS", cursive;
+                padding: 0.5rem;
+                font-size: 1.25rem;
+                color: black;
+                font-weight: 400;
                 width: fit-content;
                 letter-spacing: 1px;
-            }
-            #order-online {
-                color: white;
-                background-color: rgb(255, 140, 0);
-                margin-top: 1.75rem;
-                padding: .5rem 1rem;
-                border-radius: 10px;
-                letter-spacing: 0;
-                #coming-soon {
-                    font-size: .75rem;
-                    line-height: 0.8rem;
-                    color: rgb(227, 227, 227);
-                    font-style: italic;
-                }
+                display: inline-block;
             }
         }
         input:checked ~ #menu {
